# fast-django

./: LICENSE  README.md  main.py  manage.py  pyproject.toml
config/: settings.py
db_app/: models.py
db_app/migrations/: 0001_initial.py
