[project]
name = "fast-django"
version = "0.1.0"
description = "Leverages FastAPI's speed and Django's robust ORM for building efficient Python web applications."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref>=3.8.1",
    "django>=5.2",
    "fastapi>=0.115.12",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "uvicorn[standard]>=0.34.0",
]
